@@ -69,8 +69,8 @@
           +-----+-----+-----+-----+-----+-----+-----+-----+
           Hadej pismeno (*) > 
                               |
-                              +--> hvezdicku pro dostupne volby
-                                   (napr. '0' kdykoli ukonci hru)
+                              +--> hvezdicku pro rychle volby
+                                   (napr. 0 kdykoli ukonci hru)
 
 
           -------------------------------------------------------
